# Geome3Dash

./: .gitignore  CMakeLists.txt  Geome3Dash.sln  LICENSE  README.md  mod.json
.github/workflows/: develop.yml  nightly.yml
Geome3Dash/: Geome3Dash.vcxproj  Geome3Dash.vcxproj.filters  Ground3D.cpp  Ground3D.h  Hooks.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OpenGLStateHelper.cpp  OpenGLStateHelper.h  Shader.cpp  ShaderProgram.cpp  ShaderScene.cpp  ShaderScene.h  Texture.cpp  Texture.h  dllmain.cpp  pch.cpp  pch.h
Geome3Dash/.src/: BezierManager.h  LevelDataManager.cpp
Geome3Dash/.src/delegate/: CustomTouch.cpp  CustomTouch.h
Geome3Dash/.src/helper/: CommonHelper.h  Easing.h
Geome3Dash/lib/imgui-cocos/: imgui-cocos.cpp
Geome3Dash/lib/terrain/: App.cpp  App.h
Geome3Dash/src/: BezierHelper.cpp  BezierHelper.h  BezierManager.cpp  BezierManager.h  BlockModelStorage.cpp  BlockModelStorage.h  BlockModelsStorage.cpp  BlockModelsStorage.h  CameraAction.cpp  CameraAction.h  CocosShaderProgram.cpp  CocosShaderProgram.h  CustomMouse.h  Entries.cpp  G3DBase3DNode.cpp  G3DBase3DNode.h  G3DBaseNode.cpp  G3DBaseNode.h  G3DFragmentShaderLayer.cpp  G3DFragmentShaderLayer.h  G3DModelPreviewLayer.cpp  G3DModelPreviewLayer.h  G3DPlanetLayer.cpp  G3DPlanetLayer.h  G3DPlayLayer.cpp  G3DPlayLayer.h  G3DPlayLayer3D.cpp  G3DPlayLayer3D.h  GameObjectModel.cpp  GameObjectModel.h  Geome3DashEntry.cpp  Geome3DashEntry.h  Ground3D.cpp  Ground3D.h  Hooks.cpp  Hooks.h  LevelDataManager.cpp  LevelDataManager.h  LevelEditorGUI.cpp  LevelEditorImGui.cpp  (+19 more)
Geome3Dash/src/3SusEngine/: BasicShaders.cpp  BasicShaders.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderScene.cpp  ShaderScene.h
Geome3Dash/src/Delegate/: CustomKeyboard.cpp  CustomMouse.cpp  CustomTouch.cpp
Geome3Dash/src/Game/: G3DBaseNode.cpp  G3DBaseNode.h
Geome3Dash/src/Helper/: BezierHelper.cpp  BezierHelper.h  CommonHelper.cpp  OpenGLStateHelper.cpp  OpenGLStateHelper.h
Geome3Dash/src/Sus3D/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  ShaderProgram.cpp  ShaderProgram.h  Shaders.cpp  Shaders.h  Texture.cpp  Texture.h
Geome3Dash/src/delegate/: CustomKeyboard.cpp  CustomKeyboard.h  CustomMouse.cpp  CustomMouse.h  CustomTouch.cpp  CustomTouch.h
Geome3Dash/src/engine/: LICENSE
Geome3Dash/src/game/: G3DNumberSetting.cpp
Geome3Dash/src/gui/: DebugWindowImGui.cpp  LevelEditorImGui.cpp
Geome3Dash/src/helper/: CameraKeyframeBuffer.cpp  CameraKeyframeBuffer.h  CommonHelper.cpp  CommonHelper.h  Easing.cpp  Easing.h  KeyframeData.cpp  KeyframeData.h  OpenGLStateHelper.cpp
Geome3Dash/src/hook/: CCEGLView.cpp  CCKeyboardDispatcher.cpp  CCMouseDispatcher.cpp  CCTouchDispatcher.cpp  CreatorLayer.cpp  GameManager.cpp  LevelEditorLayer.cpp  LoadingLayer.cpp  MenuGameLayer.cpp  MenuLayer.cpp  PlayLayer.cpp
Geome3Dash/src/implengine/: CloudMesh.cpp  CloudMesh.h  CloudModel.cpp  CloudModel.h
Geome3Dash/src/manager/: LevelDataManager.cpp  LevelDataManager.h  ModelManager.cpp  ModelManager.h  PlanetStateManager.cpp  PlanetStateManager.h
Geome3Dash/src/model/: GameObjectModel.cpp  GameObjectModel.h  GroundObjectModel.cpp  GroundObjectModel.h  PlayerObjectModel.cpp  PlayerObjectModel.h
Geome3Dash/src/planet/: G3DPlanetLayer.h
Geome3Dash/src/playing/: G3DPlayLayer.cpp
Geome3Dash/src/test/: G3DModelPreviewLayer.h
Geome3Dash/src/transformer/: AGomtBase.cpp  AGomtBase.h  AGomtSpline.cpp  AGomtSpline.h  AnimationGameObjectModelTransformer.cpp  AnimationGameObjectModelTransformer.h  BezierCameraPlayerObjectModelTransformer.cpp  GameObjectModelTransformer.cpp  (+24 more)
build-android64/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  what.txt
build-android64/CPM_modules/: FindTulipHook.cmake  Findassimp.cmake  Findbindings.cmake  Findfmt.cmake  Findgd-imgui-cocos.cmake  Findimgui.cmake  Findjson.cmake  Findresult.cmake
build-android64/bindings/: cmake_install.cmake
build-android64/geode/: cmake_install.cmake
geodezip/: rainixgd.geome3dash.exp
resources/: list.bat  run.bat
(+978 files in other folders)
